// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> it should render a loading button 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-width: 135px;
  white-space: nowrap;
  font-family: text;
  background-color: accent;
  padding: 8px 25px;
  font-size: 14px;
  font-weight: 500;
  color: primaryDark;
  text-align: center;
  border-radius: 40px;
  cursor: pointer;
  border: none;
  outline: none;
  box-shadow: 0px 4px 4px rgba(0,0,0,0.35);
}

.c0:hover {
  background-color: accentDark;
}

.c0 > img {
  margin-right: 8px;
}

<button
  class="c0"
  type="button"
>
  carregando
</button>
`;

exports[`<Button /> it should render text inside button 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-width: 135px;
  white-space: nowrap;
  font-family: text;
  background-color: accent;
  padding: 8px 25px;
  font-size: 14px;
  font-weight: 500;
  color: primaryDark;
  text-align: center;
  border-radius: 40px;
  cursor: pointer;
  border: none;
  outline: none;
  box-shadow: 0px 4px 4px rgba(0,0,0,0.35);
}

.c0:hover {
  background-color: accentDark;
}

.c0 > img {
  margin-right: 8px;
}

<button
  class="c0"
  type="button"
>
  botão
</button>
`;
